--- a/styles/main.module.scss
+++ b/styles/main.module.scss
@@ -20,24 +20,55 @@
   width: 200px;
 
   @media (min-width: 375px) {
-    width: 300px;
+    width: 250px;
+    margin: 10px;
   }
 
   @media (min-width: 769px) {
-    width: 500px;
+    width: 350px;
+    margin: 20px 0;
   }
 
-  animation: cuteAnimation 1s ease-in-out infinite;
-
-  @keyframes cuteAnimation {
+  animation: logo-vertical 2s ease-in-out infinite;
+  @keyframes logo-vertical {
     0% {
-      transform: scale(1);
+      transform: translateY(0);
     }
-    50% {
-      transform: scale(1.1);
+    8.33% {
+      transform: translateY(6px);
+    }
+    16.65% {
+      transform: translateY(-5px);
+    }
+    24.98% {
+      transform: translateY(4px);
+    }
+    33.3% {
+      transform: translateY(-2px);
+    }
+    41.63% {
+      transform: translateY(1px);
+    }
+    49.95% {
+      transform: translateY(0);
+    }
+    58.28% {
+      transform: translateY(0);
+    }
+    66.6% {
+      transform: translateY(0);
+    }
+    74.93% {
+      transform: translateY(0);
+    }
+    83.25% {
+      transform: translateY(0);
+    }
+    91.58% {
+      transform: translateY(0);
     }
     100% {
-      transform: scale(1);
+      transform: translateY(0);
     }
   }
 }
