chore: react-calendar 라이브러리 설치 및 토큰이 있을 때 캘린더로 이동하도록 경로 수정

--- a/styles/login.module.scss
+++ b/styles/login.module.scss
@@ -104,7 +104,7 @@
 
 @media (min-width: 769px) {
   .login-link-text::after {
-    content: "여기서 다이어리에 가입하고 소중한 순간을 기록해보세요.";
+    content: "여기서 Picdiary에 가입하고 소중한 순간을 기록해보세요.";
   }
 }
 
