--- a/globals.css
+++ b/globals.css
@@ -6,6 +6,10 @@
   --gray-light: #f0f0f0;
   --white: #ffffff;
   --red: #ed0d0d;
+  --orange: #dc7b27cc;
+  --orange-transparent: #ffb4737a;
+  --yellow: #ffefa0cc;
+  --yellow-transparent: #ffffeecc;
   --blue: #62bdb2cc;
   --blue-light: #8ddbd2cc;
   --green: #1f915dcc;
@@ -15,9 +19,9 @@
   --pink-light: #d69393;
   --white-transparent: #ffffffa0;
   --white-more-transparent: #ffffff3c;
-  --yellow-gradient: linear-gradient(128deg, #ff7e7e3d, #fbecb052);
   --green-gradient: linear-gradient(90deg, #91edb165, rgb(222, 207, 132));
   --pink-gradient: linear-gradient(45deg, #ffe0e065, #f5d9da, #e2e5d3, #c6fffe);
+  --yellow-gradient: linear-gradient(0deg, #ffefa0cc, #ffffeecc);
   --box-shadow: 0 1px 4px rgba(147, 147, 147, 0.196);
   --box-shadow-light: 0 1px 5px 1px rgba(255, 255, 255, 0.388);
   --box-shadow-dark: 0 1px 10px 2px rgba(97, 191, 210, 0.388);
@@ -41,7 +45,7 @@ body {
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  letter-spacing: 0px;
+  letter-spacing: -1px;
   line-height: normal;
   word-break: keep-all;
 }
