--- a/styles/button.module.scss
+++ b/styles/button.module.scss
@@ -1,7 +1,7 @@
 .button {
   width: fit-content;
   padding: 10px 20px;
-  border: none;
+  border: 1px solid var(--white);
   border-radius: 10px;
   cursor: pointer;
   font-size: 0.8rem;
