feat: 로그아웃 다이얼로그 추가 및 스타일 변경

--- a/globals.css
+++ b/globals.css
@@ -6,6 +6,7 @@
   --gray-light: #f0f0f0;
   --white: #ffffff;
   --red: #ed0d0d;
+  --red-light: #d43333c1;
   --orange: #dc7b27cc;
   --orange-transparent: #ffb4737a;
   --yellow: #ffefa0cc;
@@ -15,6 +16,7 @@
   --green: #1f915dcc;
   --green-light: #72cea5a4;
   --green-transparent: #58c0918a;
+  --pink: #d58585;
   --pink-transparent: #da9a9aa0;
   --pink-light: #d69393;
   --white-transparent: #ffffffa0;
