--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -92,3 +92,78 @@
     font-weight: bold;
   }
 }
+
+h2.dialog-title {
+  // all: unset;
+  font-size: 1.2em;
+  letter-spacing: -1px;
+  text-align: center;
+}
+
+p.dialog-description {
+  all: unset;
+  font-size: 0.9em;
+  letter-spacing: -1px;
+}
+
+.dialog-actions {
+  display: flex;
+  justify-content: center;
+  justify-content: flex-end;
+  margin-bottom: 10px;
+
+  @media (min-width: 769px) {
+    padding: 20px 40px;
+    margin: 10px 20px;
+  }
+}
+
+.header-modal-btn {
+  box-shadow: var(--box-shadow);
+  background-color: var(--pink-light);
+  color: var(--white);
+  font-size: 0.8em;
+  font-weight: bold;
+  letter-spacing: -1px;
+
+  &:hover {
+    transition: all 0.1s ease;
+    box-shadow: var(--box-shadow);
+    color: var(--red-light);
+  }
+
+  @media (min-width: 375px) {
+    font-size: 0.8em;
+  }
+
+  @media (min-width: 769px) {
+    padding: 10px 20px;
+    font-size: 0.9em;
+    font-weight: bold;
+  }
+}
+
+.header-modal-btn-back {
+  box-shadow: var(--box-shadow);
+  background: var(--pink-transparent);
+  color: var(--white);
+  font-size: 0.8em;
+  font-weight: bold;
+  letter-spacing: -1px;
+
+  &:hover {
+    transition: all 0.2s ease;
+    box-shadow: var(--box-shadow);
+    color: var(--pink);
+  }
+
+  @media (min-width: 375px) {
+    font-size: 0.8em;
+  }
+
+  @media (min-width: 769px) {
+    padding: 10px 20px;
+    font-size: 0.9em;
+    font-weight: bold;
+  }
+}
