--- a/styles/calendar.module.scss
+++ b/styles/calendar.module.scss
@@ -13,7 +13,7 @@
   cursor: pointer;
   display: flex;
   justify-content: center;
-  width: 250px;
+  width: 270px;
   margin: 0 10px;
   padding: 10px 30px;
   border: 3px dotted var(--white);
@@ -30,7 +30,7 @@
     color: var(--orange);
   }
 
-  @media (min-width: 768px) {
+  @media (min-width: 769px) {
     font-size: 1em;
     width: 500px;
   }
@@ -41,12 +41,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
   gap: 20px;
-  margin: 0 10px;
-  padding-bottom: 20px;
+  padding: 0 10px 25px;
   background: var(--white);
-  border-radius: 20px;
   box-shadow: var(--box-shadow);
 
   @media (min-width: 769px) {
