--- a/styles/calendarCells.module.scss
+++ b/styles/calendarCells.module.scss
@@ -1,40 +1,44 @@
-.cells-wrapper {
+.cell-wrapper {
   display: flex;
-  flex-wrap: wrap;
-  width: 35px;
-  height: 35px;
-  border-radius: 10px;
-  box-shadow: var(--gray) 0px 0px 1px 0px;
-
-  @media (min-width: 769px) {
-    width: 150px;
-    height: 150px;
-    padding: 10px;
-  }
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 5px;
 }
 
 .cell {
   display: flex;
+  justify-content: center;
   margin: 5px;
-  width: 35px;
-  height: 35px;
+  width: 2.5em;
+  height: 3em;
   font-size: 0.7em;
+  border: solid 0.5px var(--gray-light);
+  color: var(--blue);
 
-  &:hover {
+  &:hover,
+  &:active,
+  &:focus {
     cursor: pointer;
     background-color: var(--green-transparent);
   }
 
+  @media (min-width: 375px) {
+  }
+
   @media (min-width: 769px) {
-    justify-content: center;
-    background-color: var(--gray-dark);
-    width: 40px;
-    height: 40px;
+    width: 8em;
+    height: 5em;
+    font-size: 1em;
     margin: 3px;
     padding: 5px;
-    border-radius: 50%;
+    color: var(--blue);
     font-size: 1em;
   }
+}
+
+.not-current-month {
+  color: var(--gray-dark);
 }
 
 .cells-number {
@@ -42,25 +46,21 @@
   justify-content: center;
   font-size: 1.2em;
   font-weight: bold;
-  color: var(--blue);
-
-  @media (min-width: 769px) {
-    color: var(--white);
-  }
 }
 
 .cells-row {
   display: flex;
   justify-content: center;
-
-  @media (min-width: 769px) {
-  }
 }
 
-.days {
-  padding: 6px;
-  background-color: var(--green-transparent);
+.cells-body {
+  width: 240px;
+
+  @media (min-width: 375px) {
+    width: 300px;
+  }
+
   @media (min-width: 769px) {
-    padding: 10px;
+    width: 600px;
   }
 }
