--- a/styles/calendarHeader.module.scss
+++ b/styles/calendarHeader.module.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  margin-top: 15px;
 
   @media (min-width: 769px) {
     width: 70%;
