feat: 캘린더 컴포넌트 셀 스타일 변경 및 클릭 이벤트 추가

--- a/globals.css
+++ b/globals.css
@@ -9,6 +9,7 @@
   --red-light: #d43333c1;
   --orange: #e39a5acc;
   --orange-transparent: #ffb4737a;
+  --orange-deep-gradient: linear-gradient(90deg, #ffe9a0cc, #e8ffddfb);
   --yellow: #ffefa0cc;
   --yellow-transparent: #ffffeecc;
   --blue: #62bdb2cc;
