--- a/globals.css
+++ b/globals.css
@@ -1,6 +1,7 @@
 :root {
   --black: #000000;
   --gray: #525252;
+  --gray-real-dark: #363636;
   --gray-dark: #b4b4b4;
   --gray-lightdark: #dedede;
   --gray-light: #f0f0f0;
