--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -94,7 +94,6 @@
 }
 
 h2.dialog-title {
-  // all: unset;
   font-size: 1.2em;
   letter-spacing: -1px;
   text-align: center;
@@ -102,7 +101,9 @@ h2.dialog-title {
 
 p.dialog-description {
   all: unset;
-  font-size: 0.9em;
+  color: var(--gray-real-dark);
+  font-size: 0.8em;
+  font-weight: bold;
   letter-spacing: -1px;
 }
 
@@ -112,6 +113,11 @@ p.dialog-description {
   justify-content: flex-end;
   margin-bottom: 10px;
 
+  @media (min-width: 375px) {
+    padding: 10px 30px;
+    margin: 10px 20px;
+  }
+
   @media (min-width: 769px) {
     padding: 20px 40px;
     margin: 10px 20px;
@@ -119,6 +125,7 @@ p.dialog-description {
 }
 
 .header-modal-btn {
+  border: none;
   box-shadow: var(--box-shadow);
   background-color: var(--pink-light);
   color: var(--white);
@@ -133,6 +140,7 @@ p.dialog-description {
   }
 
   @media (min-width: 375px) {
+    padding: 10px 20px;
     font-size: 0.8em;
   }
 
@@ -144,6 +152,7 @@ p.dialog-description {
 }
 
 .header-modal-btn-back {
+  border: none;
   box-shadow: var(--box-shadow);
   background: var(--pink-transparent);
   color: var(--white);
@@ -158,12 +167,12 @@ p.dialog-description {
   }
 
   @media (min-width: 375px) {
+    padding: 10px 20px;
     font-size: 0.8em;
   }
 
   @media (min-width: 769px) {
     padding: 10px 20px;
     font-size: 0.9em;
-    font-weight: bold;
   }
 }
