design: 불필요한 스크롤이 뜨지 않도록 body에 css 설정

--- a/globals.css
+++ b/globals.css
@@ -53,6 +53,9 @@ body {
   letter-spacing: -1px;
   line-height: normal;
   word-break: keep-all;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 html {
