--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -66,7 +66,7 @@
   }
 }
 
-.logout-button {
+button.logout-button {
   padding: 10px 20px;
   box-shadow: var(--box-shadow);
   background: var(--yellow-gradient);
