feat: 구글 로그인 기능 추가

--- a/styles/login.module.scss
+++ b/styles/login.module.scss
@@ -6,7 +6,6 @@
   width: 100%;
   min-width: 250px;
   height: 400px;
-  max-height: 500px;
   padding: 0 30px;
   border-radius: 10px;
   background-color: var(--white-more-transparent);
@@ -15,6 +14,7 @@
   @media (min-width: 769px) {
     width: 900px;
     max-width: 800px;
+    height: 500px;
   }
 }
 
@@ -69,7 +69,15 @@
 
   &:hover {
     color: var(--gray-dark);
+    text-decoration: underline;
   }
+}
+
+.login-hr {
+  width: 100%;
+  margin: 20px 0 0;
+  border: none;
+  border-top: 1px solid var(--gray-dark);
 }
 
 .login-link-box {
@@ -123,9 +131,11 @@
   }
 }
 
-.login-btn {
+button.login-btn {
   background-color: var(--blue);
+  border: none;
   color: var(--white);
+  padding: 11px 20px;
 
   &:hover {
     background-color: var(--blue-light);
