--- a/globals.css
+++ b/globals.css
@@ -47,7 +47,6 @@ body {
 
 body {
   font-family: "Pretendard", Helvetica;
-  font-size: 14px;
   font-style: normal;
   font-weight: 400;
   letter-spacing: -1px;
@@ -60,6 +59,7 @@ body {
 
 html {
   height: 100%;
+  font-size: 62.5%;
 }
 
 body,
