--- a/styles/calendar.module.scss
+++ b/styles/calendar.module.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background: var(--yellow-gradient);
   gap: 20px;
 }
@@ -21,7 +21,7 @@
   box-shadow: var(--box-shadow);
   background: var(--orange);
   color: var(--white);
-  font-size: 0.9em;
+  font-size: 1.3rem;
   font-weight: bold;
   letter-spacing: -1px;
 
@@ -31,7 +31,7 @@
   }
 
   @media (min-width: 769px) {
-    font-size: 1em;
+    font-size: 1.7rem;
     width: 500px;
   }
 }
