--- a/styles/calendarCells.module.scss
+++ b/styles/calendarCells.module.scss
@@ -10,9 +10,9 @@
   display: flex;
   justify-content: center;
   margin: 3px;
-  width: 2.8em;
-  height: 3em;
-  font-size: 0.7em;
+  width: 30px;
+  height: 40px;
+  font-size: 1.3rem;
   border: solid 0.5px var(--gray-light);
   color: var(--blue);
 
@@ -22,30 +22,28 @@
   }
 
   @media (min-width: 375px) {
-    width: 3.4em;
-    height: 4em;
+    width: 34px;
+    height: 40px;
     margin: 3px;
     padding: 5px;
-    font-size: 0.7em;
+    font-size: 1.3rem;
   }
 
   @media (min-width: 769px) {
     justify-content: left;
-    width: 6.1em;
-    height: 5em;
-    font-size: 1em;
+    width: 80px;
+    height: 110px;
     margin: 6px;
     padding: 5px 15px;
-    font-size: 0.9em;
+    font-size: 1.3rem;
   }
 
   @media (min-width: 1024px) {
-    width: 7.5em;
-    height: 5em;
-    font-size: 1em;
+    width: 120px;
+    height: 120px;
+    font-size: 1.5rem;
     margin: 3px;
-    padding: 10px 15px;
-    font-size: 1em;
+    padding: 10px 5px;
   }
 }
 
@@ -62,8 +60,29 @@
 .cells-number {
   display: flex;
   justify-content: center;
-  font-size: 1em;
   font-weight: bold;
+  font-size: 1.3rem;
+
+  @media (min-width: 375px) {
+    font-size: 1.2rem;
+  }
+
+  @media (min-width: 769px) {
+    justify-content: left;
+    width: 80px;
+    height: 110px;
+    margin: 6px;
+    padding: 5px 15px;
+    font-size: 1.3rem;
+  }
+
+  @media (min-width: 1024px) {
+    width: 120px;
+    height: 120px;
+    font-size: 1.5rem;
+    margin: 3px;
+    padding: 10px 15px;
+  }
 }
 
 .cells-row {
