--- a/styles/googleLogin.module.scss
+++ b/styles/googleLogin.module.scss
@@ -10,7 +10,7 @@ button.google-button {
   border: 1px solid var(--white);
   border-radius: 10px;
   color: var(--gray);
-  font-size: 0.8em;
+  font-size: 1.3rem;
   letter-spacing: -1px;
   transition: all 0.2s ease-in-out;
 
@@ -21,6 +21,6 @@ button.google-button {
 
   @media (min-width: 769px) {
     padding: 10px 30px;
-    font-size: 0.9em;
+    font-size: 1.3rem;
   }
 }
