--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -71,7 +71,7 @@ button.logout-button {
   box-shadow: var(--box-shadow);
   background: var(--yellow-gradient);
   color: var(--gray-dark);
-  font-size: 0.7em;
+  font-size: 1.3rem;
   font-weight: bold;
   letter-spacing: -1px;
 
@@ -83,18 +83,18 @@ button.logout-button {
 
   @media (min-width: 375px) {
     padding: 10px 20px;
-    font-size: 0.8em;
+    font-size: 1.2rem;
   }
 
   @media (min-width: 769px) {
     padding: 10px 20px;
-    font-size: 0.9em;
+    font-size: 1.5rem;
     font-weight: bold;
   }
 }
 
 h2.dialog-title {
-  font-size: 1.2em;
+  font-size: 1.2rem;
   letter-spacing: -1px;
   text-align: center;
 }
@@ -102,25 +102,24 @@ h2.dialog-title {
 p.dialog-description {
   all: unset;
   color: var(--gray-real-dark);
-  font-size: 0.8em;
+  font-size: 1.3rem;
   font-weight: bold;
   letter-spacing: -1px;
 }
 
-.dialog-actions {
+div.dialog-actions {
   display: flex;
   justify-content: center;
-  justify-content: flex-end;
   margin-bottom: 10px;
 
   @media (min-width: 375px) {
     padding: 10px 30px;
-    margin: 10px 20px;
+    margin: 0 10px 10px;
   }
 
   @media (min-width: 769px) {
-    padding: 20px 40px;
-    margin: 10px 20px;
+    padding: 5px 40px;
+    margin: 0 20px 15px;
   }
 }
 
@@ -129,7 +128,7 @@ button.header-modal-btn {
   box-shadow: var(--box-shadow);
   background-color: var(--pink-light);
   color: var(--white);
-  font-size: 0.8em;
+  font-size: 1.3rem;
   font-weight: bold;
   letter-spacing: -1px;
 
@@ -141,12 +140,12 @@ button.header-modal-btn {
 
   @media (min-width: 375px) {
     padding: 10px 20px;
-    font-size: 0.8em;
+    font-size: 1.3rem;
   }
 
   @media (min-width: 769px) {
     padding: 10px 20px;
-    font-size: 0.8em;
+    font-size: 1.3rem;
     font-weight: bold;
   }
 }
@@ -156,7 +155,7 @@ button.header-modal-btn-back {
   box-shadow: var(--box-shadow);
   background: var(--pink-transparent);
   color: var(--white);
-  font-size: 0.8em;
+  font-size: 1.3rem;
   font-weight: bold;
   letter-spacing: -1px;
 
@@ -168,11 +167,11 @@ button.header-modal-btn-back {
 
   @media (min-width: 375px) {
     padding: 10px 20px;
-    font-size: 0.8em;
+    font-size: 1.3rem;
   }
 
   @media (min-width: 769px) {
     padding: 10px 20px;
-    font-size: 0.8em;
+    font-size: 1.3rem;
   }
 }
