--- a/styles/noDiary.module.scss
+++ b/styles/noDiary.module.scss
@@ -14,7 +14,7 @@
   width: 100%;
   height: 100%;
   padding: 10px 25px;
-  background: var(--yellow-gradient);
+  background: var(--yellow-transparent);
   gap: 20px;
 }
 
@@ -70,15 +70,14 @@
   border: none;
   border-radius: 30px;
   box-shadow: var(--box-shadow);
-  background: var(--orange);
+  background: var(--blue);
   color: var(--white);
   font-size: 1.3rem;
   font-weight: bold;
   letter-spacing: -1px;
 
   &:hover {
-    background: var(--orange-transparent);
-    color: var(--orange);
+    background: var(--blue-light);
   }
 
   @media (min-width: 769px) {
